--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0">
   <title>记事本</title>
   <!-- build:css bundle.min.css -->
-  <link rel="stylesheet" href="bundle.min.css" />
-  <!--<link rel="stylesheet" href="css/index.css">-->
+  <!--<link rel="stylesheet" href="bundle.min.css" />-->
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
   <div class="notepad-app"></div>
@@ -15,8 +15,8 @@
 <script src="//apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.js"></script>
 <!-- build:js bundle.min.js -->
-<script src="bundle.min.js"></script>
-<!--
+<!--<script src="bundle.min.js"></script>-->
+
 <script src="component/menubar.js"></script>
 <script src="component/editor.js"></script>
 <script src="component/dlg-about.js"></script>
@@ -24,5 +24,5 @@
 <script src="component/dlg-font.js"></script>
 <script src="js/app.js"></script>
 <script src="js/menu-data.js"></script>
--->
+
 </html>
